--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -28,6 +28,10 @@
     transition: all 0.2s linear;
 }
 
+.favorites__save:disabled{
+    opacity: 0.3;
+}
+
 .favorites__save:hover {
     cursor: pointer;
     opacity: 0.7;
